added scenario context and cleaning of code